Added LinkedIn link on line 43

--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,8 @@ baseurl: "/JeGo" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-#     twitter: fastdotai
     github: Jessegoodspeed
+    linkedin: https://www.linkedin.com/in/jessegoodspeed/
 
 # Set this to true to get LaTeX math equation support
 use_math: true
